b 시스템 .table-set 클래스 추가 bc>GNB,업체상세정보,상담관리,요청사항관리

--- a/guide/list.html
+++ b/guide/list.html
@@ -1034,9 +1034,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-31</td>
                     <td class="ex_end">08-31</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -1047,9 +1047,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-31</td>
                     <td class="ex_end">08-31</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -1060,12 +1060,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-31</td>
                     <td class="ex_end">08-31</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">05배분</td>
                     <td class="d2">04은행후취수수료관리</td>
                     <td class="d3">01조회</td>
@@ -1073,6 +1073,136 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-31</td>
                     <td class="ex_end">08-31</td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
+                    <td>디자인 수정반영 필요</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">05신용카드수수료</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050501</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">05신용카드수수료</td>
+                    <td class="d3">02수수료등록</td>
+                    <td class="sbid"><span class="pc">SA050502</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">07휴대전화수수료</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050701</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">01FMS입금통장관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060101</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">02수기입출관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060201</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">02수기입출관리</td>
+                    <td class="d3">02수기입출관리등록</td>
+                    <td class="sbid"><span class="pc">SA060202</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(md)</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">03월마감전표</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060301</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">04전표관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060401</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">05ERP계정관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060501</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">06회계</td>
+                    <td class="d2">06간편결제수수료</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA060601</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
