--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -296,7 +296,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(410-sm)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">04상담등록</td>
                     <td class="d3"></td>
@@ -304,12 +304,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-01</td>
                     <td class="ex_end">09-01</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(960-xl)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">04상담등록</td>
                     <td class="d3">설문조사</td>
@@ -317,9 +317,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-01</td>
                     <td class="ex_end">09-01</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(600-md)</td>
                 </tr>
                 <tr class="del">
@@ -413,7 +413,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03업체상세정보</td>
                     <td class="d2">02이용서비스</td>
                     <td class="d3">카드수수료 변경이력 조회</td>
@@ -421,12 +421,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-02</td>
                     <td class="ex_end">09-02</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03업체상세정보</td>
                     <td class="d2">02이용서비스</td>
                     <td class="d3">간편동의 세부설정</td>
@@ -434,9 +434,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-02</td>
                     <td class="ex_end">09-02</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
@@ -473,9 +473,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-03</td>
                     <td class="ex_end">09-03</td>
-                    <td class="date_start"></td>
+                    <td class="date_start">09-01</td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(800-md2)</td>
                 </tr>
                 <tr class="del">
@@ -590,7 +590,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-06</td>
                     <td class="ex_end">09-06</td>
-                    <td class="date_start"></td>
+                    <td class="date_start">09-01</td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700-xmd)</td>
@@ -608,7 +608,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">03고객문의관리</td>
                     <td class="d3">할당건 영업진행상황관리</td>
@@ -616,9 +616,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-07</td>
                     <td class="ex_end">09-07</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
@@ -707,12 +707,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start"></td>
+                    <td class="date_start">09-01</td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">요청접수</td>
@@ -720,12 +720,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">요청접수 결과</td>
@@ -733,12 +733,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-31</td>
+                    <td class="date_end">08-31</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">수정요청</td>
@@ -746,12 +746,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-08</td>
                     <td class="ex_end">09-08</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">수정요청_결과</td>
@@ -759,12 +759,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">접수/수정_업체입력(default)</td>
@@ -772,12 +772,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(450-xsm)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">09요청사항관리</td>
                     <td class="d3">접수/수정_업체입력</td>
@@ -785,9 +785,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(450-xsm)</td>
                 </tr>
                 <tr class="del">
@@ -816,7 +816,7 @@
                     <td class="state" data-state="del"></td>
                     <td>popup(800-md2)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">11아웃바인드</td>
                     <td class="d3">엑셀업로드</td>
@@ -824,9 +824,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-09</td>
                     <td class="ex_end">09-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(800-md2)</td>
                 </tr>
                 <tr class="del">
@@ -842,7 +842,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">12CMS동의서관리</td>
                     <td class="d3">건별등록</td>
@@ -850,9 +850,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-10</td>
                     <td class="ex_end">09-10</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
@@ -894,7 +894,7 @@
                     <td class="state" data-state="del"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">15Q&A관리/협력사Q&A관리</td>
                     <td class="d3">상세정보</td>
@@ -902,12 +902,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">15Q&A관리/협력사Q&A관리</td>
                     <td class="d3">Q&A수정</td>
@@ -915,12 +915,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">09-01</td>
+                    <td class="date_end">09-01</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(700-xmd)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05상담관리</td>
                     <td class="d2">15Q&A관리/협력사Q&A관리</td>
                     <td class="d3">Q&A답변</td>
@@ -928,7 +928,7 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-13</td>
                     <td class="ex_end">09-13</td>
-                    <td class="date_start"></td>
+                    <td class="date_start">09-02</td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(700-xmd)</td>
