--- a/pages/SA/SA010302_01.html
+++ b/pages/SA/SA010302_01.html
@@ -28,59 +28,60 @@
                             events: { close: onClose}"
             class="md">
             <div class="content-group">
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="90px">
-                            <col width="*">
-                            <col width="90px">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row">상품구분</th>
-                                <td colspan="3">
-                                    <select data-role="dropdownlist" data-value="결합" data-option-label="결합" class="lg">
-                                        <option value="1">온라인</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">상품코드</th>
-                                <td><input type="text" class="h-input" value="자동생성" disabled="disabled"/></td>
-                                <th scope="row">상품명</th>
-                                <td><input type="text" class="h-input" value="A시스템 할인"/></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">표준가격</th>
-                                <td>
-                                    <div class="form-set">
-                                        <input type="text" class="h-input" value="" />
-                                        <span class="unit">원</span>
-                                    </div>
-                                </td>
-                                <th scope="row">최소가격</th>
-                                <td>
-                                    <div class="form-set">
-                                        <input type="text" class="h-input" value="" />
-                                        <span class="unit">원</span>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">어플리케이션<br/>상품</th>
-                                <td colspan="3">
-                                    <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="lg">
-                                        <option value="1">ASP 3.0</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="table-set">
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="90px">
+                                <col width="*">
+                                <col width="90px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">상품구분</th>
+                                    <td colspan="3">
+                                        <select data-role="dropdownlist" data-value="결합" data-option-label="결합" class="lg">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">상품코드</th>
+                                    <td><input type="text" class="h-input" value="자동생성" disabled="disabled"/></td>
+                                    <th scope="row">상품명</th>
+                                    <td><input type="text" class="h-input" value="A시스템 할인"/></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">표준가격</th>
+                                    <td>
+                                        <div class="form-set">
+                                            <input type="text" class="h-input" value="" />
+                                            <span class="unit">원</span>
+                                        </div>
+                                    </td>
+                                    <th scope="row">최소가격</th>
+                                    <td>
+                                        <div class="form-set">
+                                            <input type="text" class="h-input" value="" />
+                                            <span class="unit">원</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">어플리케이션<br/>상품</th>
+                                    <td colspan="3">
+                                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="lg">
+                                            <option value="1">ASP 3.0</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-
                 <!-- 결제상품 -->
                 <div class="table-set">
                     <div class="title-box xsm">
