--- a/pages/SA/SA020503.html
+++ b/pages/SA/SA020503.html
@@ -28,83 +28,83 @@
                             events: { close: onClose}"
             class="lg">
             <div class="content-group">
-
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="110px">
-                            <col width="*">
-                            <col width="110px">
-                            <col width="*">
-                            <col width="110px">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row">고객사명</th>
-                                <td><input type="text" class="h-input" placeholder="" value="효성에프엠에스" /></td>
-                                <th scope="row">사업자번호</th>
-                                <td><input type="text" class="h-input" placeholder="" value="" /></td>
-                                <th scope="row">대표자명</th>
-                                <td><input type="text" class="h-input" placeholder="" value="" /></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">전화번호</th>
-                                <td><input type="text" class="h-input" placeholder="" value="효성에프엠에스" /></td>
-                                <th scope="row">휴대전화</th>
-                                <td><input type="text" class="h-input" placeholder="" value="" /></td>
-                                <th scope="row">대표자 생년월일</th>
-                                <td><input type="text" class="h-input" placeholder="" value="" /></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">관심 분야</th>
-                                <td colspan="5">
-                                    <div class="form-set">
-                                        <input type="text" class="h-input xsm" placeholder="검색해주세요" value="" disabled="disabled"/>
-                                        <input type="text" class="h-input" placeholder="기본주소" value="" disabled="disabled"/>
-                                        <input type="text" class="h-input" placeholder="상세주소" value="" />
-                                        <button data-role="button" class="gray-border">주소찾기</button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">사업장주소</th>
-                                <td>
-                                    <select data-role="dropdownlist" data-value="금융사고다발고객" data-option-label="금융사고다발고객">
-                                        <option value="1">금융사고다발고객</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                                <th scope="row">차단여부</th>
-                                <td>
-                                    <select data-role="dropdownlist" data-value="오픈차단" data-option-label="오픈차단">
-                                        <option value="1">오픈차단</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                                <th scope="row">공개여부</th>
-                                <td>
-                                    <select data-role="dropdownlist" data-value="비공개" data-option-label="비공개">
-                                        <option value="1">비공개</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">사유</th>
-                                <td colspan="5">
-                                    <textarea data-role="textarea"
-                                        data-format="c"
-                                        data-min="0"
-                                        data-max="100"
-                                        data-rows="4"
-                                        data-placeholder="" class="sm"></textarea>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="table-set">
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="110px">
+                                <col width="*">
+                                <col width="110px">
+                                <col width="*">
+                                <col width="110px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">고객사명</th>
+                                    <td><input type="text" class="h-input" placeholder="" value="효성에프엠에스" /></td>
+                                    <th scope="row">사업자번호</th>
+                                    <td><input type="text" class="h-input" placeholder="" value="" /></td>
+                                    <th scope="row">대표자명</th>
+                                    <td><input type="text" class="h-input" placeholder="" value="" /></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">전화번호</th>
+                                    <td><input type="text" class="h-input" placeholder="" value="효성에프엠에스" /></td>
+                                    <th scope="row">휴대전화</th>
+                                    <td><input type="text" class="h-input" placeholder="" value="" /></td>
+                                    <th scope="row">대표자 생년월일</th>
+                                    <td><input type="text" class="h-input" placeholder="" value="" /></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">관심 분야</th>
+                                    <td colspan="5">
+                                        <div class="form-set">
+                                            <input type="text" class="h-input xsm" placeholder="검색해주세요" value="" disabled="disabled"/>
+                                            <input type="text" class="h-input" placeholder="기본주소" value="" disabled="disabled"/>
+                                            <input type="text" class="h-input" placeholder="상세주소" value="" />
+                                            <button data-role="button" class="gray-border">주소찾기</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">사업장주소</th>
+                                    <td>
+                                        <select data-role="dropdownlist" data-value="금융사고다발고객" data-option-label="금융사고다발고객">
+                                            <option value="1">금융사고다발고객</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                    <th scope="row">차단여부</th>
+                                    <td>
+                                        <select data-role="dropdownlist" data-value="오픈차단" data-option-label="오픈차단">
+                                            <option value="1">오픈차단</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                    <th scope="row">공개여부</th>
+                                    <td>
+                                        <select data-role="dropdownlist" data-value="비공개" data-option-label="비공개">
+                                            <option value="1">비공개</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">사유</th>
+                                    <td colspan="5">
+                                        <textarea data-role="textarea"
+                                            data-format="c"
+                                            data-min="0"
+                                            data-max="100"
+                                            data-rows="4"
+                                            data-placeholder="" class="sm"></textarea>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                
                 <!-- 차단고객리스트 -->
                 <div class="table-set">
                     <div class="title-box xsm">
