--- a/pages/SA/SA070102.html
+++ b/pages/SA/SA070102.html
@@ -28,47 +28,49 @@
                             events: { close: onClose}"
             class="md">
             <div class="content-group">
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="80px">
-                            <col width="*">
-                            <col width="80px">
-                            <col width="*">
-                            <col width="80px">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row">상품구분</th>
-                                <td colspan="5">효성에프엠에스 상담 제목입니다.</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">상담인</th>
-                                <td>홍길동</td>
-                                <th scope="row">전화번호</th>
-                                <td>010-1234-5678</td>
-                                <th scope="row">접수일시</th>
-                                <td>2021/07/20 12:35:26</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">협력사명</th>
-                                <td>협력사명</td>
-                                <th scope="row">고객사명</th>
-                                <td>고객사명</td>
-                                <th scope="row">회원명</th>
-                                <td>김효성</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">결제수단</th>
-                                <td>결제수단</td>
-                                <th scope="row">결제사</th>
-                                <td>결제사</td>
-                                <th scope="row">결제번호</th>
-                                <td>001</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="table-set">
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="80px">
+                                <col width="*">
+                                <col width="80px">
+                                <col width="*">
+                                <col width="80px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">상품구분</th>
+                                    <td colspan="5">효성에프엠에스 상담 제목입니다.</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">상담인</th>
+                                    <td>홍길동</td>
+                                    <th scope="row">전화번호</th>
+                                    <td>010-1234-5678</td>
+                                    <th scope="row">접수일시</th>
+                                    <td>2021/07/20 12:35:26</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">협력사명</th>
+                                    <td>협력사명</td>
+                                    <th scope="row">고객사명</th>
+                                    <td>고객사명</td>
+                                    <th scope="row">회원명</th>
+                                    <td>김효성</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">결제수단</th>
+                                    <td>결제수단</td>
+                                    <th scope="row">결제사</th>
+                                    <td>결제사</td>
+                                    <th scope="row">결제번호</th>
+                                    <td>001</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="table-group half">
                     <!-- 문의내용 -->
