--- a/pages/SA/SA010302_02.html
+++ b/pages/SA/SA010302_02.html
@@ -28,100 +28,102 @@
                             events: { close: onClose}"
             class="md">
             <div class="content-group">
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="90px">
-                            <col width="*">
-                            <col width="90px">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row">상품구분</th>
-                                <td>
-                                    <select data-role="dropdownlist" data-value="결제서비스" data-option-label="결제서비스">
-                                        <option value="1">온라인</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                                <th scope="row">결제수단코드</th>
-                                <td>
-                                    <select data-role="dropdownlist" data-value="결제서비스코드" data-option-label="결제서비스코드">
-                                        <option value="1">온라인</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">상품명</th>
-                                <td><input type="text" class="h-input" value="실시간CMS정률(8%)"/></td>
-                                <th scope="row">상품코드</th>
-                                <td><input type="text" class="h-input" value="자동생성" disabled="disabled"/></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">수수료</th>
-                                <td colspan="3">
-                                    <div class="divide">
-                                        <div class="list">
-                                            <div class="form-set">
-                                                <div class="h-checkbox no-label">
-                                                    <input type="checkbox" id="checkbox-fee1" name="checkbox" />
-                                                    <label for="checkbox-fee1"></label> 
+                <div class="table-set">
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="90px">
+                                <col width="*">
+                                <col width="90px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">상품구분</th>
+                                    <td>
+                                        <select data-role="dropdownlist" data-value="결제서비스" data-option-label="결제서비스">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                    <th scope="row">결제수단코드</th>
+                                    <td>
+                                        <select data-role="dropdownlist" data-value="결제서비스코드" data-option-label="결제서비스코드">
+                                            <option value="1">온라인</option>
+                                            <option value="2">오프라인</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">상품명</th>
+                                    <td><input type="text" class="h-input" value="실시간CMS정률(8%)"/></td>
+                                    <th scope="row">상품코드</th>
+                                    <td><input type="text" class="h-input" value="자동생성" disabled="disabled"/></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">수수료</th>
+                                    <td colspan="3">
+                                        <div class="divide">
+                                            <div class="list">
+                                                <div class="form-set">
+                                                    <div class="h-checkbox no-label">
+                                                        <input type="checkbox" id="checkbox-fee1" name="checkbox" />
+                                                        <label for="checkbox-fee1"></label> 
+                                                    </div>
+                                                    <select data-role="dropdownlist" data-value="의뢰수수료" data-option-label="의뢰수수료" class="sm"> 
+                                                        <option value="1">온라인</option>
+                                                        <option value="2">오프라인</option>
+                                                    </select>
+                                                    <select data-role="dropdownlist" data-value="정액" data-option-label="정액" class="xs">
+                                                        <option value="1">온라인</option>
+                                                        <option value="2">오프라인</option>
+                                                    </select>
+                                                    <input type="text" class="h-input xs" value="500" />
+                                                    <span class="unit">원</span>
                                                 </div>
-                                                <select data-role="dropdownlist" data-value="의뢰수수료" data-option-label="의뢰수수료" class="sm"> 
-                                                    <option value="1">온라인</option>
-                                                    <option value="2">오프라인</option>
-                                                </select>
-                                                <select data-role="dropdownlist" data-value="정액" data-option-label="정액" class="xs">
-                                                    <option value="1">온라인</option>
-                                                    <option value="2">오프라인</option>
-                                                </select>
-                                                <input type="text" class="h-input xs" value="500" />
-                                                <span class="unit">원</span>
+                                            </div>
+                                            <div class="list">
+                                                <div class="form-set">
+                                                    <div class="h-checkbox">
+                                                        <input type="checkbox" id="checkbox-fee2" name="checkbox" />
+                                                        <label for="checkbox-fee2">영중소수수료</label> 
+                                                    </div>
+                                                    <input type="text" class="h-input xs" placeholder="일반" class="xs"/>
+                                                    <input type="text" class="h-input xs" placeholder="영세" class="xs"/>
+                                                    <input type="text" class="h-input xs" placeholder="중소1" class="xs"/>
+                                                    <input type="text" class="h-input xs" placeholder="중소2" class="xs"/>
+                                                    <input type="text" class="h-input xs" placeholder="중소3" class="xs"/>
+                                                    <span class="unit">%</span>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="list">
-                                            <div class="form-set">
-                                                <div class="h-checkbox">
-                                                    <input type="checkbox" id="checkbox-fee2" name="checkbox" />
-                                                    <label for="checkbox-fee2">영중소수수료</label> 
+                                        <div class="divide">
+                                            <div class="list">
+                                                <div class="form-set">
+                                                    <div class="h-checkbox">
+                                                        <input type="checkbox" id="checkbox-fee3" name="checkbox" />
+                                                        <label for="checkbox-fee3">최소수수료</label> 
+                                                    </div>
+                                                    <input type="text" class="h-input xs" value="500" class="xs"/>
+                                                    <span class="unit">원</span>
                                                 </div>
-                                                <input type="text" class="h-input xs" placeholder="일반" class="xs"/>
-                                                <input type="text" class="h-input xs" placeholder="영세" class="xs"/>
-                                                <input type="text" class="h-input xs" placeholder="중소1" class="xs"/>
-                                                <input type="text" class="h-input xs" placeholder="중소2" class="xs"/>
-                                                <input type="text" class="h-input xs" placeholder="중소3" class="xs"/>
-                                                <span class="unit">%</span>
+                                            </div>
+                                            <div class="list">
+                                                <div class="form-set">
+                                                    <div class="h-checkbox">
+                                                        <input type="checkbox" id="checkbox-fee4" name="checkbox" />
+                                                        <label for="checkbox-fee4">무료건수</label> 
+                                                    </div>
+                                                    <input type="text" class="h-input xs" value="" class="xs"/>
+                                                    <span class="unit">건</span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="divide">
-                                        <div class="list">
-                                            <div class="form-set">
-                                                <div class="h-checkbox">
-                                                    <input type="checkbox" id="checkbox-fee3" name="checkbox" />
-                                                    <label for="checkbox-fee3">최소수수료</label> 
-                                                </div>
-                                                <input type="text" class="h-input xs" value="500" class="xs"/>
-                                                <span class="unit">원</span>
-                                            </div>
-                                        </div>
-                                        <div class="list">
-                                            <div class="form-set">
-                                                <div class="h-checkbox">
-                                                    <input type="checkbox" id="checkbox-fee4" name="checkbox" />
-                                                    <label for="checkbox-fee4">무료건수</label> 
-                                                </div>
-                                                <input type="text" class="h-input xs" value="" class="xs"/>
-                                                <span class="unit">건</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <!-- 결제상품 -->
                 <div class="table-set">
