--- a/pages/SA/SA070204.html
+++ b/pages/SA/SA070204.html
@@ -26,183 +26,188 @@
              data-modal="false"
              data-bind="dialogOpen: isVisible,
                             events: { close: onClose}"
-            class="md">
+            class="lg">
             <div class="content-group">
-
                 <!-- 업무정보 -->
-                <div class="title-box xsm mt-0">
-                    <div class="left-group">
-                        <h2 class="sub-title">업무정보</h2>
+                <div class="table-set">
+                    <div class="title-box xsm mt-0">
+                        <div class="left-group">
+                            <h2 class="sub-title">업무정보</h2>
+                        </div>
+                    </div>    
+                    <div class="info-banner company">
+                        <div class="list">
+                            <h4 class="tit">협력사명</h4>
+                            <span class="desc">암호화테스트대리점 (TEL. 02-123-4567 / HP. 010-1234-5678)</span>
+                            <span class="badge yellow">수정요청</span>
+                        </div>
                     </div>
-                </div>    
-                <div class="info-banner company">
-                    <div class="list">
-                        <h4 class="tit">협력사명</h4>
-                        <span class="desc">암호화테스트대리점 (TEL. 02-123-4567 / HP. 010-1234-5678)</span>
-                        <span class="badge yellow">수정요청</span>
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="80px">
+                                <col width="*">
+                                <col width="80px">
+                                <col width="*">
+                                <col width="80px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">업무종류</th>
+                                    <td>기술지원</td>
+                                    <th scope="row">접수일</th>
+                                    <td>2021/05/20 14:29:57</td>
+                                    <th scope="row">접수처</th>
+                                    <td>협력사</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">평가</th>
+                                    <td colspan="5">
+                                        <div class="form-set">
+                                            <select id="" data-role="dropdownlist" data-value="선택" data-option-label="선택" class="sm">
+                                                <option value="1">온라인</option>
+                                                <option value="2">오프라인</option>
+                                            </select>
+                                            <select id="" data-role="dropdownlist" data-value="불량사유" data-option-label="불량사유" class="md">
+                                                <option value="1">온라인</option>
+                                                <option value="2">오프라인</option>
+                                            </select>
+                                            <button data-role="button" class="blue-border">저장</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </div>
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="80px">
-                            <col width="*">
-                            <col width="80px">
-                            <col width="*">
-                            <col width="80px">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row">업무종류</th>
-                                <td>기술지원</td>
-                                <th scope="row">접수일</th>
-                                <td>2021/05/20 14:29:57</td>
-                                <th scope="row">접수처</th>
-                                <td>협력사</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">평가</th>
-                                <td colspan="5">
-                                    <div class="form-set">
-                                        <select id="" data-role="dropdownlist" data-value="선택" data-option-label="선택" class="sm">
-                                            <option value="1">온라인</option>
-                                            <option value="2">오프라인</option>
-                                        </select>
-                                        <select id="" data-role="dropdownlist" data-value="불량사유" data-option-label="불량사유" class="md">
-                                            <option value="1">온라인</option>
-                                            <option value="2">오프라인</option>
-                                        </select>
-                                        <button data-role="button" class="blue-border">저장</button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
                 </div>
                 <!-- //업무정보 -->
                 <!-- 이력수정 -->
-                <div class="title-box xsm">
-                    <div class="left-group">
-                        <h2 class="sub-title">이력수정</h2>
+                <div class="table-set">
+                    <div class="title-box xsm">
+                        <div class="left-group">
+                            <h2 class="sub-title">이력수정</h2>
+                        </div>
+                    </div>    
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="80px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">고객사명</th>
+                                    <td>
+                                        <input type="text" class="h-input" value="햇님유치원" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">대응자</th>
+                                    <td>
+                                        <input type="text" class="h-input" value="홍길동" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">첨부파일</th>
+                                    <td>
+                                        <div class="t-widget t-upload">
+                                            <ul class="t-upload-files t-reset">
+                                                <li class="t-file">
+                                                    <span class="file-title">사업자등록증</span>
+                                                    <span class="file-desc">
+                                                        <span class="t-icon t-success"></span>
+                                                        <a href="#" class="text-link">Untitled.pdf</a>
+                                                        <span class="file-date">2021/03/11 16:40:58</span>
+                                                    </span>
+                                                    <button data-role="button" data-icon="close" class="close hidden"><span>닫기</span></button>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">요청사항</th>
+                                    <td>
+                                        <textarea data-role="textarea"
+                                        data-format="c"
+                                        data-min="0"
+                                        data-max="100"
+                                        data-rows="4"
+                                        data-placeholder="" class="sm"></textarea>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </div>    
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="80px">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row">고객사명</th>
-                                <td>
-                                    <input type="text" class="h-input" value="햇님유치원" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">대응자</th>
-                                <td>
-                                    <input type="text" class="h-input" value="홍길동" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">첨부파일</th>
-                                <td>
-                                    <div class="t-widget t-upload">
-                                        <ul class="t-upload-files t-reset">
-                                            <li class="t-file">
-                                                <span class="file-title">사업자등록증</span>
-                                                <span class="file-desc">
-                                                    <span class="t-icon t-success"></span>
-                                                    <a href="#" class="text-link">Untitled.pdf</a>
-                                                    <span class="file-date">2021/03/11 16:40:58</span>
-                                                </span>
-                                                <button data-role="button" data-icon="close" class="close hidden"><span>닫기</span></button>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">요청사항</th>
-                                <td>
-                                    <textarea data-role="textarea"
-                                    data-format="c"
-                                    data-min="0"
-                                    data-max="100"
-                                    data-rows="4"
-                                    data-placeholder="" class="sm"></textarea>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="btn-box bottom justify-content-between">
-                    <button data-role="button" class="light-blue">문서보기</button>
-                    <div class="btn-box mt-0">
-                        <button data-role="button" class="gray-border">처리대상 외</button>
-                        <button data-role="button" class="">문의접수</button>
-                        <button data-role="button" class="">수정요청</button>
-                        <button data-role="button" class="">확인완료</button>
+                    <div class="btn-box bottom justify-content-between">
+                        <button data-role="button" class="light-blue">문서보기</button>
+                        <div class="btn-box mt-0">
+                            <button data-role="button" class="gray-border">처리대상 외</button>
+                            <button data-role="button" class="">문의접수</button>
+                            <button data-role="button" class="">수정요청</button>
+                            <button data-role="button" class="">확인완료</button>
+                        </div>
                     </div>
                 </div>
                 <!-- //이력수정 -->
                 
                 <!-- 업무 이력 -->
-                <div class="title-box xsm">
-                    <div class="left-group">
-                        <h2 class="sub-title">업무 이력</h2>
-                    </div>
-                </div>    
-                <div class="list-wrap">
-                    <div class="list-set answer">
-                        <div class="list-title">
-                            <span class="badge count">2</span>
-                            대응
+                <div class="table-set">
+                    <div class="title-box xsm">
+                        <div class="left-group">
+                            <h2 class="sub-title">업무 이력</h2>
                         </div>
-                        <div class="list-box history">
-                            <span class="badge yellow">수정요청</span>
-                            <div class="list">
-                                <span class="label has-bar">고객사명</span>
-                                <span class="desc">햇님유치원</span>
+                    </div>    
+                    <div class="list-wrap">
+                        <div class="list-set answer">
+                            <div class="list-title">
+                                <span class="badge count">2</span>
+                                대응
                             </div>
-                            <div class="list">
-                                <span class="label has-bar">대응자</span>
-                                <span class="desc">홍길동</span>
-                            </div>
-                            <div class="list">
-                                <span class="label has-bar">처리일자</span>
-                                <span class="desc">2021/05/20 14:29:57</span>
-                            </div>
-                            <div class="list">
-                                <span class="label has-bar">대응자 요청사항</span>
-                                <span class="desc">효성에프엠에스 요청사항입니다.</span>
+                            <div class="list-box history">
+                                <span class="badge yellow">수정요청</span>
+                                <div class="list">
+                                    <span class="label has-bar">고객사명</span>
+                                    <span class="desc">햇님유치원</span>
+                                </div>
+                                <div class="list">
+                                    <span class="label has-bar">대응자</span>
+                                    <span class="desc">홍길동</span>
+                                </div>
+                                <div class="list">
+                                    <span class="label has-bar">처리일자</span>
+                                    <span class="desc">2021/05/20 14:29:57</span>
+                                </div>
+                                <div class="list">
+                                    <span class="label has-bar">대응자 요청사항</span>
+                                    <span class="desc">효성에프엠에스 요청사항입니다.</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="list-set receipt">
-                        <div class="list-title">
-                            <span class="badge count">1</span>
-                            접수
-                        </div>
-                        <div class="list-box history">
-                            <span class="badge gray">대기</span>
-                            <div class="list">
-                                <span class="label has-bar">고객사명</span>
-                                <span class="desc">햇님유치원</span>
+                        <div class="list-set receipt">
+                            <div class="list-title">
+                                <span class="badge count">1</span>
+                                접수
                             </div>
-                            <div class="list">
-                                <span class="label has-bar">접수자</span>
-                                <span class="desc">홍길동</span>
-                            </div>
-                            <div class="list">
-                                <span class="label has-bar">처리일자</span>
-                                <span class="desc">2021/05/20 14:29:57</span>
-                            </div>
-                            <div class="list">
-                                <span class="label has-bar">접수자 요청사항</span>
-                                <span class="desc">효성에프엠에스 요청사항입니다.</span>
+                            <div class="list-box history">
+                                <span class="badge gray">대기</span>
+                                <div class="list">
+                                    <span class="label has-bar">고객사명</span>
+                                    <span class="desc">햇님유치원</span>
+                                </div>
+                                <div class="list">
+                                    <span class="label has-bar">접수자</span>
+                                    <span class="desc">홍길동</span>
+                                </div>
+                                <div class="list">
+                                    <span class="label has-bar">처리일자</span>
+                                    <span class="desc">2021/05/20 14:29:57</span>
+                                </div>
+                                <div class="list">
+                                    <span class="label has-bar">접수자 요청사항</span>
+                                    <span class="desc">효성에프엠에스 요청사항입니다.</span>
+                                </div>
                             </div>
                         </div>
                     </div>
